# ESP32-IDF

./: README.md
docs/: Develop with VSCode Plug-in.docx
docs/FAQ/English/development-environment/: index.rst
examples/1.3inch/UEDX24240013-MD50E-SDK-en/: CMakeLists.txt
examples/1.3inch/UEDX24240013-MD50E-SDK-en/components/bsp/: bsp_indev.c
examples/1.3inch/UEDX24240013-MD50E-SDK-en/main/ui/: ui.c  ui_clock.c  ui_fan.c  ui_light.c  ui_player.h  ui_weather.h
examples/1.3inch/UEDX24240013-MD50E-SDK-en/main/ui/imgs/: img_washing_shirt.c  img_washing_underwear.c
examples/1.3inch/UEDX24240013-MD50E-SDK/components/bsp/: CMakeLists.txt
examples/1.3inch/UEDX24240013-MD50E-SDK/main/: lvgl_port.c
examples/1.3inch/UEDX24240013-MD50E-SDK/main/ui/: ui_fan.h  ui_light.c  ui_light.h  ui_washing.c  ui_washing.h  ui_weather.c
examples/2.1inch/UEDX48480021-MD80E-SDK/: CMakeLists.txt  partitions.csv  sdkconfig
examples/2.1inch/UEDX48480021-MD80E-SDK/components/bsp/: CMakeLists.txt  Kconfig  bsp.c  idf_component.yml
examples/2.1inch/UEDX48480021-MD80E-SDK/components/bsp/sub_board/: bsp_lcd.c
examples/2.1inch/UEDX48480021-MD80E-SDK/main/ui/: ui_clockScreen.c  ui_light_2color.c  ui_thermostat.c  ui_washing.c
examples/2.1inch/UEDX48480021-MD80E-SDK/main/ui/fonts/: HelveticaNeue_Regular_40.c  HelveticaNeue_Regular_48.c  HelveticaNeue_Regular_80.c  SourceHanSansCN_Normal30.c  font_SourceHanSansCN_38.c
examples/2.1inch/UEDX48480021-MD80E-SDK/main/ui/imgs/: imglogo.c
examples/2.1inch/UEDX48480021-MD80E-SDK/main/ui/layer_manage/: lv_example_image.h
examples/2.4inch/UEDX24_28_35E-WB-A-General-SDK/components/espressif__esp_lcd_touch_cst816s/: .component_hash
examples/2.4inch/UEDX24_28_35E-WB-A-General-SDK/main/: board.h  main.c
examples/2.8inch/UEDX24_28_35E-WB-A-General-SDK/: sdkconfig.defaults
examples/3.5inch/High-resolution_240320/UEDX24_28_35E-WB-A-General-SDK/main/: board.c
examples/3.5inch/High-resolution_320480/UEDX24_28_35E-WB-A-General-SDK/components/espressif__esp_lcd_touch_cst816s/: esp_lcd_touch_cst816s.c  idf_component.yml
examples/3.5inch/High-resolution_320480/UEDX24_28_35E-WB-A-General-SDK/main/: CMakeLists.txt  board.h
examples/3.5inch/Low-resolution_240320/UEDX24_28_35E-WB-A-General-SDK/: CMakeLists.txt  sdkconfig.old
examples/3.5inch/Low-resolution_240320/UEDX24_28_35E-WB-A-General-SDK/main/: board.h
examples/3.5inch/UEDX24_28_35E-WB-A-General-SDK/: sdkconfig
examples/3.5inch/UEDX24_28_35E-WB-A-General-SDK/main/: idf_component.yml
examples/4.0inch/UEDX48480040E-WB-3touch-SDK/components/lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.h
examples/4.0inch/UEDX48480040E-WB-3touch-SDK/components/lvgl_esp32_drivers/: bsp_lcd.c  st7701_init.c
examples/4.0inch/UEDX48480040E-WB-3touch-SDK/components/lvgl_esp32_drivers/include/: bsp_board.h
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-3touch-SDK/: CMakeLists.txt  sdkconfig
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-3touch-SDK/main/: CMakeLists.txt
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-IDF-SDK/: .cproject
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-IDF-SDK/components/lvgl/: CMakeLists.txt  lv_conf.h
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-IDF-SDK/components/lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_indev.c
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-IDF-SDK/components/lvgl/src/: lv_conf_internal.h
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-IDF-SDK/components/lvgl/src/misc/: lv_fs.h
examples/4.3inch/High-resolution_800480/UEDX80480043E-WB-A-IDF-SDK/main/: CMakeLists.txt  idf_component.yml  main.c
examples/4.3inch/Low-resolution_480272/UEDX48270043E-WB-A-IDF-SDK/: sdkconfig
examples/4.3inch/Low-resolution_480272/UEDX48270043E-WB-A-IDF-SDK/main/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c
examples/4.3inch/UEDX80480043E-WB-A-3touch-SDK/: .project
examples/4.3inch/UEDX80480043E-WB-A-IDF-SDK/: sdkconfig  sdkconfig.old
examples/5.0inch/UEDX80480050E-WB-A-3touch-SDK/: sdkconfig.old
examples/5.0inch/UEDX80480050E-WB-A-3touch-SDK/main/: main.c
examples/DX80480070E-WB-A-SDK/components/lvgl/porting/: lv_port_disp.c
examples/DX80480070E-WB-A-SDK/components/lvgl_touch/: FT62XX.c
examples/DX80480070E-WB-A-SDK/components/lvgl_touch/include/: FT62XX.h
examples/UEDX24240013-MD50E-SDK/: partitions.csv
examples/UEDX24240013-MD50E-SDK-en/components/bsp/: bsp_lcd.c  bsp_lcd.h
examples/UEDX24240013-MD50E-SDK-en/main/: CMakeLists.txt  app_main.c
examples/UEDX24240013-MD50E-SDK-en/main/ui/: ui.h  ui_menu.c  ui_menu.h  ui_player.c
examples/UEDX24240013-MD50E-SDK-en/main/ui/imgs/: icon_light.c  icon_washing.c  img_washing_stand.c
examples/UEDX24240013-MD50E-SDK/main/: lvgl_port.h
examples/UEDX24240013-MD50E-SDK/main/ui/: ui_clock.h
examples/UEDX48480021-MD80E-SDK/: sdkconfig.defaults  sdkconfig.old
examples/UEDX48480021-MD80E-SDK/components/bsp/priv_include/: bsp_sub_board.h
examples/UEDX48480021-MD80E-SDK/main/: CMakeLists.txt  app_main.c
examples/UEDX48480021-MD80E-SDK/main/ui/: ui_boot_animate.c  ui_factory.c  ui_language.c  ui_menu_new.c
examples/UEDX48480021-MD80E-SDK/main/ui/imgs/image_light/: light_cool_50.c  light_warm_25.c  light_warm_50.c
examples/UEDX48480021-MD80E-SDK/main/ui/imgs/image_main/: icon_light.c  icon_light_ns.c  icon_thermostat_ns.c
examples/UEDX48480021-MD80E-SDK/main/ui/imgs/image_wash/: img_washing_bubble1.c  img_washing_bubble2.c  img_washing_shirt.c  img_washing_underwear.c  wash_basic.c  wash_blouse.c  wash_briefs.c  wash_shirt.c  wash_underwear1.c  wash_underwear2.c
examples/UEDX48480021-MD80E-SDK/main/ui/layer_manage/: lv_example_pub.h
examples/UEDX48480040E-WB-3touch-SDK/main/: main.c
examples/UEDX80480050E-WB-A-3touch-SDK/components/lvgl/porting/: lv_port_disp.c
examples/UEDX80480050E-WB-A-3touch-SDK/components/lvgl_touch/: gt911.c
examples/UEDX80480050E-WB-A-3touch-SDK/components/lvgl_touch/include/: CST3240.h
(+55 files in other folders)
